src/style.css
* {
    margin: 0;
}

body {
    user-select: none;
    background-color: white;
    position: relative;
}

#play-overlay {
    top: 0;
    min-height: 100svh;
    min-width: 100svw;
    display: grid;
    position: absolute;
    z-index: 3;
    place-items: center;
    background-color: rgba(0, 0, 0, 0.9999);
    cursor: pointer;
}

p {
    font-size: 32px;
    color: white;
    font-weight: normal;
}

#play-text {
    display: none;
}

.score-container {
    position: absolute;
    top: 0;
    right: 0;
    padding: 32px;

    font-size: 12px;
    transition: all 0.5s;
}

.score-text {
    transition: all 0.5s;
    font-size: inherit;
}

#score-10 {
    font-size: 32px;
}

#joystick {
    position: relative;
    left: 10px;
    bottom: 10px;
    transform: translateY(-140px);
    width: 140px;
    height: 140px;
    z-index: 10;
}
.not-selectable {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;
    touch-action: none;
    pointer-events: auto;
}

#jump-button {
    display: grid;
    place-items: center;
    position: fixed;
    bottom: 10px;
    right: 10px;
    height: 140px;
    width: 140px;
    border-radius: 50%;
    z-index: 10;
}
#jump-button > div {
    width: 80px;
    height: 80px;
    background: rgba(255, 255, 255, 0.2);
    border: 2px solid #fff;
    border-radius: 50%;
}

